# cardwise

./: .dockerignore  .env  .env.backend.example  .env.cli.example  .env.example  .env.ingestion.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.cli  Dockerfile.ingestion  Makefile  README.md  caca.txt  commitlint.config.js  compose.yaml  conda_env.yaml  generate_conda_env.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  results.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/actions/: checkout-python-poetry.yaml  setup-python-poetry.yaml
.github/actions/setup-python-poetry/: action.yaml
.github/workflows/: ci.yaml  ingest-monthly.yaml  ping-backend.yaml  ping-backend.yaml.disabled
backend/app/: main.py
backend/app/api/: health.py  offers.py
backend/app/core/: config.py  logging_config.py  logging_config.yaml
backend/app/db/: session.py
backend/app/services/: offer_service.py
cardwise/domain/models/: __init__.py  bank.py  shop.py
cardwise/persistence/models/: offer_db.py
cli/: main.py  utils.py
cli/commands/: ingest.py  search.py
cli/core/: config.py
data/htmls/: bank-name_offers_placeholder.html
frontend/cardwise/: pubspec.yaml
frontend/cardwise/android/app/: build.gradle.kts
frontend/cardwise/android/app/src/main/: AndroidManifest.xml
frontend/cardwise/android/app/src/main/kotlin/com/example/cardwise/: MainActivity.kt
frontend/cardwise/lib/models/: offer.dart
frontend/cardwise/lib/screens/: search_screen.dart
frontend/cardwise/lib/services/: offer_api_service.dart
frontend/cardwise/linux/: CMakeLists.txt
frontend/cardwise/linux/runner/: my_application.cc
frontend/cardwise/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/cardwise/macos/Runner/Configs/: AppInfo.xcconfig
frontend/cardwise/test/: search_screen_test.dart
frontend/cardwise/web/: index.html
frontend/cardwise/windows/runner/: Runner.rc
frontend/mobile_app/: pubspec.yaml
frontend/mobile_app/lib/: main.dart
frontend/mobile_app/lib/services/: offer_api_service.dart
frontend/mobile_app/test/: search_screen_test.dart
htmls/: chase_offers.html
ingestion/: main.py  parser_registry.py
ingestion/core/: config.py  logging_config.py  logging_config.yaml
ingestion/gcs/: gcs_client.py
ingestion/logs/: README.md
ingestion/parsers/: bank_of_america.py  base.py  capital_one.py  chase.py
ingestion/persistence/: db.py  repository.py
ingestion/pipeline/: file_loader.py  load_htmls.py  offer_ingestion_pipeline.py  upload_htmls.py
src/bank_parser/: bank_of_america.py  capital_one.py  chase.py  exceptions.py  logger.py  search_offers.py
src/cardwise/: __init__.py
src/cardwise/app/: data_loader.py  offer_finder_service.py
src/cardwise/bank_parser/: bank_of_america.py  capital_one.py  chase.py  exceptions.py  search_offers.py
src/cardwise/cli/: main.py
src/cardwise/db/: models.py  session.py  utils.py
src/cardwise/domain/formatters/: base_offer_formatter.py  cli_offer_formatter.py  json_offer_formatter.py  utils.py
src/cardwise/domain/matchers/: base_shopmatcher.py  rapidfuzz_shopmatcher.py  utils.py
src/cardwise/domain/models/: bank.py  offer.py  shop.py  utils.py
src/cardwise/entities/: Bank.py  BankInfo.py  Offer.py  Shop.py
src/cardwise/formatters/: base.py  cli_formatter.py  json_formatter.py
src/cardwise/infrastructure/db/: mapper.py  models.py  session.py
src/cardwise/infrastructure/db/repositories/: SQLModel_offer_repository.py  base_offer_repository.py  utils.py
src/cardwise/infrastructure/logs/: logging.py  logging_config.yaml
src/cardwise/infrastructure/parsers/: bank_of_america_offer_parser.py  base_offer_parser.py  capital_one_offer_parser.py  chase_offer_parser.py  parser_registry.py
src/cardwise/matchers/: base.py  rapidfuzz_matcher.py
src/cardwise/parsers/: BankOfAmericaOfferParser.py  CapitalOneOfferParser.py  ChaseOfferParser.py  base.py
src/cardwise/services/: offer_db_service.py  offer_finder.py  offer_finder_service.py
src/cardwise/shared/: exceptions.py
src/cardwise/utils/: fuzzy_matcher.py  html_parser.py
src/utils/: fuzzy_matcher.py  html_parser.py
tests/: test_bank_of_america.py  test_capital_one.py  test_chase_parser.py  test_cli.py  test_fuzzy_matching.py  test_integration.py  test_logger.py
tests/backend/: test_offer_service.py
tests/cli/: test_main.py
tests/db/: test_models.py
tests/entities/: test_bank.py  test_bank_info.py  test_offer.py  test_shop.py
tests/formatters/: test_cli_formatter.py  test_json_formatter.py
tests/ingestion/: test_repository.py
tests/mappers/: test_offer_mappers.py
tests/matchers/: test_rapidfuzz_matcher.py
tests/parsers/: test_BankOfAmericaOfferParser.py  test_CapitalOneOfferParser.py  test_ChaseOfferParser.py  test_bank_offer_parser.py
tests/repositories/: test_offer_repository_impl.py
tests/samples/corrupted/: corrupted_boa_invalid.html  corrupted_boa_malformed.html  corrupted_boa_no_company.html  corrupted_boa_no_offer.html  corrupted_capital_one_invalid.html  corrupted_capital_one_malformed.html  corrupted_capital_one_no_company.html  corrupted_capital_one_no_image.html  corrupted_capital_one_no_offer.html  corrupted_chase_invalid.html  corrupted_chase_malformed.html  corrupted_chase_no_company.html  corrupted_chase_no_offer.html
tests/samples/valid/: sample_boa_duplicates.html  sample_boa_special_chars.html  sample_boa_valid.html  sample_boa_whitespace.html  sample_capital_one_duplicates.html  sample_capital_one_special_chars.html  sample_capital_one_valid.html  sample_capital_one_whitespace.html  sample_chase_duplicates.html  sample_chase_special_chars.html  sample_chase_valid.html  sample_chase_whitespace.html
tests/services/: test_offer_data_loader_service.py  test_offer_finder_service.py
