[tool.poetry]
name = "cardwise"
version = "0.1.0"
description = "A package to find the best card to use for your purchase"
authors = ["Aydin Abiar <aydinabiar@gmail.com>"]
readme = "README.md"
packages = [{ include = "bank_parser", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
beautifulsoup4 = "^4.13.3"
rapidfuzz = "^3.12.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-benchmark = "*"
pytest-cov = "*"
ruff = "*"
pyright = "*"
pre-commit = "*"
tox = "^4.24.2"

[tool.poetry.scripts]
search_offer = "bank_parser.search_offers:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100  # Matches `black`
target-version = "py310"  # Python version

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]  # Enable linting + import sorting
fixable = ["ALL"]  # Auto-fix everything

[tool.ruff.format]
quote-style = "double"  # Optional: use double quotes

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false


[tool.tox]
env_list = ["py39", "py310", "py311", "py312", "py313", "lint", "type"] 
skip_missing_interpreters = false

[tool.tox.env_run_base] # Use this for a Base Test Configuration for All `3.*` environments
package = "editable" 

# We run tests only in the 3.10 version to save time
[tool.tox.env.py310]
description = "Run tests with pytest"
package = "editable"  # Install local package in editable mode `pip install -e .`
deps = ["pytest", "pytest-cov", "pytest-benchmark"]
commands = [["pytest"]]

[tool.tox.env.lint]
description = "Run Ruff for linting"
skip_install = true
deps = ["ruff"]
commands = [["ruff", "check", "."]]

[tool.tox.env.type]
description = "Run Pyright for type checking"
skip_install = true
deps = ["pyright"]
commands = [["pyright"]]

